--- a/css-j2bt6x/dashboard.css
+++ b/css-j2bt6x/dashboard.css
@@ -1,2 +1,252 @@
-/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/07/31 13:32:24 */
-#dashboard img{cursor:pointer;}[class~=frm]{width:100%;}[class~=frm]{min-height:8.125pc;}[class~=frm]{display:inline-flex;}[class~=frm]{flex-direction:column;}[class~=frm]{margin-left:auto;}[class~=frm] img{object-fit:none;}[class~=frm]{margin-right:auto;}[class~=frm]{margin-bottom:3em;}[class~=entry]{width:auto;}[class~=entry]{min-height:8.75pc;}[class~=entryHeader],[class~=entry],#dashboard{height:auto;}#dashboard{width:600pt;}::placeholder{color:white;}#dashboard{min-width:3.333333333in;}[class~=frm] img{margin-left:.2em;}[class~=entry]{border-left-width:.0625pc;}[class~=entry]{border-bottom-width:.0625pc;}#dashboard,#divMessage h1,[class~=entryHeader]{margin-left:auto;}#dashboard{margin-bottom:10vh;}[class~=entry]{border-right-width:.0625pc;}[class~=entryHeader],[class~=frm] img{margin-bottom:auto;}[class~=entry]{border-top-width:.0625pc;}[class~=entry]{border-left-style:solid;}[class~=entry]{border-bottom-style:solid;}[class~=entry]{border-right-style:solid;}[class~=entry]{border-top-style:solid;}[class~=entry]{border-left-color:white;}[class~=entry]{border-bottom-color:white;}[class~=entry]{border-right-color:white;}[class~=entry]{border-top-color:white;}::placeholder{opacity:.5;}[class~=frm] img{margin-right:.2em;}[class~=entry]{border-image:none;}#dashboard,[class~=entryHeader]{margin-right:auto;}#dashboard{margin-top:7.4em;}[class~=entry]{border-radius:6px;}[class~=frm] img{margin-top:auto;}[class~=entry]{margin-top:.5em;}[class~=entry]{padding-bottom:1em;}[class~=frm] h1,[class~=cardNo] h1{font-family:"Roboto";}[class~=entry]{background:rgba(0,0,0,.05);}[class~=entryHeader]{display:flex;}[class~=entryHeader],.bannerLine{width:98%;}[class~=cardNo] h1,[class~=frm] h1{font-style:normal;}[class~=frm] h1{font-weight:900;}[class~=frm] h1{font-size:16.5pt;}[class~=frm] h1{line-height:21pt;}#dashboard{padding-left:1em;}[class~=cardNo] h1,[class~=frm] h1{letter-spacing:.1em;}[class~=entryHeader],.bannerLine{margin-top:1em;}#dashboard{padding-right:1em;}[class~=entryHeader]{justify-content:center;}#dashboard{display:inline-flex;}:-ms-input-placeholder{color:rgba(255,255,255,.5);}#dashboard{flex-direction:column;}[class~=frm] h1,[class~=cardNo] h1{color:#fff;}.bannerLine{height:.010416667in;}#divMessage{width:100%;}#divMessage{height:40.5pt;}#txtCardNo,#divMessage{display:flex;}.bannerLine{background-color:white;}.bannerLine{margin-left:auto;}.bannerLine{margin-right:auto;}.bannerLine{margin-bottom:.5em;}[class~=cardNo] h1{font-weight:700;}.bannerLine{opacity:.3;}#divMessage{margin-left:.5em;}[class~=textbox]{margin-left:.2em;}[class~=textbox],#divMessage h1{margin-bottom:auto;}[class~=textbox]{margin-right:.2em;}#divMessage{margin-bottom:.5em;}[class~=textbox],[class~=cardNo] h1{margin-top:auto;}[class~=textbox]{width:88%;}#divMessage{margin-right:.5em;}[class~=cardEntry],#txtCardNo,[class~=textbox],[class~=cardNo]{height:30pt;}[class~=textbox],[class~=cardNo] h1{font-size:.145833333in;}[class~=textbox]{border-left-width:.0625pc;}[class~=textbox]{border-bottom-width:.0625pc;}[class~=textbox]{border-right-width:.0625pc;}[class~=textbox]{border-top-width:.0625pc;}[class~=cardNo] h1,[class~=textbox]{line-height:23px;}[class~=textbox]{border-left-style:solid;}[class~=textbox]{border-bottom-style:solid;}[class~=textbox]{border-right-style:solid;}[class~=textbox]{border-top-style:solid;}[class~=textbox]{border-left-color:#fff;}[class~=textbox]{border-bottom-color:#fff;}#divMessage{margin-top:.5em;}[class~=textbox]{border-right-color:#fff;}#btnShow{opacity:.25;}[class~=textbox]{border-top-color:#fff;}::-ms-input-placeholder{color:rgba(255,255,255,.5);}[class~=textbox]{border-image:none;}[class~=textbox]{border-radius:4px;}[class~=cardNo] h1{margin-left:auto;}[class~=textbox]{background-color:transparent;}[class~=textbox],#divMessage h1,[class~=cardTitle] h1{font-family:"Roboto";}#txtCardNo{width:40px;}[class~=cardTitle] h1,[class~=textbox]{font-style:normal;}[class~=textbox]{font-weight:400;}[class~=textbox]{letter-spacing:.1em;}[class~=textbox]{padding-left:.4em;}#txtCardNo{min-width:2.5pc;}[class~=textbox]{padding-right:.4em;}[class~=cardNo] h1,#divMessage h1{margin-right:auto;}[class~=textbox]{padding-top:auto;}[class~=textbox]{padding-bottom:auto;}#txtCardNo,[class~=cardNo] h1{margin-bottom:auto;}[class~=textbox]{color:white;}[class~=cardNo],[class~=textbox]{outline:none;}#divMessage h1,#txtCardNo{margin-top:auto;}.cardLink,[class~=cardTitle],[class~=cardEntry],[class~=cardNo]{display:flex;}[class~=cardEntry]{width:98%;}#txtCardNo{margin-left:.2em;}[class~=cardEntry]{margin-top:1em;}[class~=cardEntry]{margin-left:auto;}[class~=cardEntry]{margin-right:auto;}.cardLink,#txtCardNo,[class~=cardNo],[class~=cardTitle]{margin-right:.2em;}[class~=cardEntry]{margin-bottom:.5em;}#txtCardNo{border-left-width:.0625pc;}#divMessage h1,[class~=cardTitle] h1{font-weight:700;}[class~=cardEntry]{justify-content:center;}[class~=cardNo]{width:50px;}#txtCardNo{border-bottom-width:.0625pc;}[class~=btnCardEdit],[class~=cardTitle],.cardLink,[class~=cardNo]{margin-left:.2em;}[class~=cardTitle],[class~=cardNo]{margin-bottom:auto;}[class~=cardNo],[class~=cardTitle]{margin-top:auto;}[class~=cardNo],.cardLink,[class~=cardTitle]{cursor:pointer;}#txtCardNo{border-right-width:.0625pc;}.cardLink,[class~=cardTitle]{width:50%;}#txtCardNo{border-top-width:.0625pc;}#txtCardNo{border-left-style:solid;}[class~=cardTitle]{height:30pt;}[class~=cardTitle] h1,#divMessage h1{font-size:10.5pt;}[class~=cardTitle],.cardLink{overflow:hidden;}.cardLink,[class~=cardTitle] h1{line-height:17.25pt;}.cardLink{height:.208333333in;}#divMessage h1{line-height:21pt;}#txtCardNo{border-bottom-style:solid;}#txtCardNo{border-right-style:solid;}#txtCardNo h1,#divMessage h1,[class~=cardTitle] h1,.cardLink{letter-spacing:.1em;}[class~=cardTitle] h1,.cardLink{margin-bottom:auto;}.cardLink,[class~=cardTitle] h1{margin-top:auto;}.cardLink{word-break:keep-all;}.cardLink,#txtCardNo{background-color:transparent;}.cardLink{outline:none;}#divMessage h1,.cardLink,[class~=cardTitle] h1{color:#fff;}#txtCardNo{border-top-style:solid;}.cardLink{border-left-width:medium;}.cardLink{border-bottom-width:medium;}.cardLink{border-right-width:medium;}.cardLink{border-top-width:medium;}.cardLink{border-left-style:none;}#txtCardNo{border-left-color:#fff;}#txtCardNo{border-bottom-color:#fff;}.cardLink{border-bottom-style:none;}#txtCardNo{border-right-color:#fff;}#txtCardNo{border-top-color:#fff;}#txtCardNo{border-image:none;}#txtCardNo h1{margin-left:auto;}.cardLink{border-right-style:none;}.cardLink{border-top-style:none;}.cardLink{border-left-color:currentColor;}.cardLink{border-bottom-color:currentColor;}.cardLink{border-right-color:currentColor;}.cardLink{border-top-color:currentColor;}.cardLink{border-image:none;}#txtCardNo h1,.cardLink{font-family:"Roboto";}#txtCardNo{border-radius:3pt;}.cardLink,#txtCardNo h1{font-style:normal;}.cardLink{font-weight:700;}.cardLink,#txtCardNo h1{font-size:.145833333in;}[class~=cardTitle] h1,.cardLink{text-align:left;}[class~=btnCardEdit],#txtCardNo h1{margin-bottom:auto;}[class~=btnCardEdit]{margin-right:.2em;}#txtCardNo h1,[class~=btnCardEdit]{margin-top:auto;}#txtCardNo h1{margin-right:auto;}#txtCardNo h1{font-weight:400;}#txtCardNo h1{line-height:.239583333in;}#txtCardNo h1{color:white;}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: white;
+    opacity: 0.5; /* Firefox */
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: rgba(255, 255, 255, 0.5)
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+    color: rgba(255, 255, 255, 0.5)
+  }
+
+#dashboard {
+    width: 800px;
+    min-width: 320px;
+    margin:auto;
+    margin-top: 7.4em;
+    margin-bottom: 10vh;
+    height: auto;
+    padding-left: 1em;
+    padding-right: 1em;
+    display: inline-flex;
+    flex-direction: column;
+}
+
+#dashboard img {
+    cursor: pointer;
+}
+
+.frm {
+    width: 100%;
+    min-height: 130px;
+    display: inline-flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 3em;
+}
+
+.frm img {
+    object-fit: none;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.frm h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 22px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+}
+
+.entry {
+    width: auto;
+    min-height: 140px;
+    height: auto;
+    border: 1px solid white;
+    border-radius: 6px;
+    margin-top: 0.5em;
+    padding-bottom: 1em;
+    background: rgba(0, 0, 0, 0.05);
+}
+
+.entryHeader {
+    display: flex;
+    width: 98%;
+    height: auto;
+    margin: auto;
+    margin-top: 1em;
+
+    justify-content: center;
+}
+
+
+.bannerLine {
+    width: 98%;
+    height: 1px;
+    background-color: white;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0.5em;
+    opacity: .3;
+}
+
+#divMessage {
+    width: 100%;
+    height: 54px;
+    display: flex;
+    margin: 0.5em;
+}
+
+#divMessage h1{
+    margin: auto;
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+}
+
+#btnShow {
+    opacity: .25;
+}
+
+
+#txtCardNo {
+    display: flex;
+    width: 40px;
+    min-width: 40px;
+    height: 40px;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+#txtCardNo h1 {
+    margin: auto;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: white;
+}
+
+.textbox {
+    margin: auto;
+    width: 88%;
+    height: 40px;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: transparent;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    padding-left: .4em;
+    padding-right: .4em;
+    padding-top: auto;
+    padding-bottom: auto;
+    color: white;
+    outline: none;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.cardEntry {
+    display: flex;
+    width: 98%;
+    height: 40px;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0.5em;
+    justify-content: center;
+}
+
+
+.cardNo {
+    width: 50px;
+    height: 40px;
+    outline: none;
+    display: flex;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+    cursor: pointer;
+}
+
+.cardNo h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin: auto;
+}
+
+.cardTitle {
+    width: 50%;
+    height: 40px;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+    display: flex;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.cardTitle h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: left;    
+}
+
+
+.cardLink {
+    width: 50%;
+    height: 20px;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+    display: flex;
+    overflow: hidden;
+    word-break:keep-all;
+    cursor: pointer;
+    background-color: transparent;
+    outline: none;
+    border: none;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: left;
+}
+
+.btnCardEdit {
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+
+
