--- a/css-j2bt6x/resources.css
+++ b/css-j2bt6x/resources.css
@@ -1,2 +1,372 @@
-/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/07/31 13:39:20 */
-[class~=dropHeader]{display:flex;}#resources{width:600pt;}.frm img{object-fit:none;}[class~=dropHeader]{justify-content:space-between;}.frm img{margin-left:.2em;}#resources{min-width:320px;}.frm img{margin-bottom:auto;}[class~=dropHeader],.frm{margin-bottom:3em;}[class~=dropOption]{color:#303030;}#resources img{cursor:pointer;}.frm img{margin-right:.2em;}.frm img{margin-top:auto;}[class~=dropOption],[class~=frm] h1{font-family:"Roboto";}[class~=dropOption],[class~=frm] h1{font-style:normal;}#resources{margin-left:auto;}[class~=dropOption]{font-weight:700;}[class~=dropOption]{font-size:.875pc;}[class~=dropOption],[class~=frm] h1{line-height:1.75pc;}[class~=frm] h1{font-weight:900;}::placeholder{color:white;}#resources{margin-bottom:10vh;}[class~=dropOption],[class~=frm] h1{letter-spacing:.1em;}[class~=dropOption]{text-align:center;}[class~=dropOption]{padding-top:1em;}[class~=dropOption]{padding-bottom:1em;}.frm{width:100%;}#resources{margin-right:auto;}.frm,[class~=entryHeader],.entry,#resources{height:auto;}#resources,.frm{display:inline-flex;}#resources,.frm{flex-direction:column;}.frm{margin-left:auto;}.frm{margin-right:auto;}#resources{margin-top:7.4em;}.entry{width:auto;}.entry{min-height:8.75pc;}[class~=frm] h1{font-size:.229166667in;}#dropCourse,.entry{border-left-width:.010416667in;}.entry,#dropCourse{border-bottom-width:.010416667in;}.entry,#dropCourse{border-right-width:.010416667in;}::placeholder{opacity:.5;}.entry,#dropCourse{border-top-width:.010416667in;}#dropCourse,.entry{border-left-style:solid;}:-ms-input-placeholder{color:rgba(255,255,255,.5);}.entry,#dropCourse{border-bottom-style:solid;}.entry,#dropCourse{border-right-style:solid;}.entry,#dropCourse{border-top-style:solid;}.entry,#dropCourse{border-left-color:white;}#resources{padding-left:1em;}.entry,#dropCourse{border-bottom-color:white;}.entry{border-right-color:white;}#resources{padding-right:1em;}#dropCourse,.entry{border-top-color:white;}.entry{border-image:none;}.entry{border-radius:.0625in;}.entry{margin-top:.5em;}.entry,#dropCourse{background:rgba(0,0,0,.05);}#dropCourse{width:49%;}#dropCourse{height:37.5pt;}#dropCourse{outline:none;}[class~=resourcesEntry] h1,[class~=frm] h1{color:#fff;}[class~=trainingVideoEntry] h1,[class~=resourcesEntry] h1{font-family:"Roboto";}[class~=resourcesEntry] h1,[class~=trainingVideoEntry] h1{font-style:normal;}[class~=resourcesEntry] h1{font-weight:700;}.entry{padding-bottom:.5em;}[class~=entryHeader]{display:flex;}[class~=resourcesEntry] h1{font-size:10.5pt;}::-ms-input-placeholder{color:rgba(255,255,255,.5);}[class~=entryHeader],[class~=bannerLine]{width:98%;}[class~=entryHeader]{margin-left:auto;}[class~=resourcesEntry] h1{line-height:17.25pt;}[class~=entryHeader]{margin-bottom:1em;}[class~=entryHeader]{margin-right:auto;}[class~=entryHeader]{margin-top:1em;}[class~=resourcesEntry] h1{letter-spacing:.1em;}[class~=entryHeader]{justify-content:space-between;}[class~=bannerLine]{height:.75pt;}[class~=bannerLine]{background-color:white;}[class~=bannerLine]{margin-left:auto;}[class~=bannerLine]{margin-right:auto;}[class~=bannerLine]{opacity:.3;}[class~=resourcesEntry] h1,[class~=trainingVideoEntry] h1{margin-top:auto;}[class~=textbox]{margin-left:.2em;}[class~=trainingVideoEntry] h1,[class~=resourcesEntry] h1{margin-bottom:auto;}#dropCourse{border-right-color:white;}#dropCourse{border-image:none;}[class~=textbox]{margin-bottom:auto;}[class~=textbox]{margin-right:.2em;}[class~=resourcesEntry] h1{text-align:left;}[class~=textbox]{margin-top:auto;}[class~=textbox]{width:94%;}[class~=textbox]{height:30pt;}[class~=textbox],#dropBatch{border-left-width:.010416667in;}[class~=textbox],#dropBatch{border-bottom-width:.010416667in;}#dropCourse{border-radius:6px;}[class~=textbox],#dropBatch{border-right-width:.010416667in;}#dropBatch,[class~=textbox]{border-top-width:.010416667in;}[class~=textbox]{border-left-style:solid;}[class~=textbox]{border-bottom-style:solid;}[class~=textbox]{border-right-style:solid;}[class~=textbox]{border-top-style:solid;}#dropCourse,[class~=trainingVideoEntry] h1{font-weight:700;}[class~=textbox],[class~=otherVideosEntry] h1,[class~=trainingVideoEntry] h1,#dropCourse{font-size:.145833333in;}[class~=textbox]{border-left-color:#fff;}#dropCourse,[class~=textbox]{font-family:"Roboto";}[class~=textbox]{border-bottom-color:#fff;}[class~=textbox]{border-right-color:#fff;}[class~=textbox],[class~=trainingVideoEntry] h1{line-height:17.25pt;}[class~=textbox],#dropCourse{font-style:normal;}[class~=textbox]{border-top-color:#fff;}[class~=textbox]{border-image:none;}#dropCourse{line-height:.291666667in;}[class~=textbox]{border-radius:.25pc;}#dropCourse,[class~=textbox],[class~=otherVideosEntry] h1,[class~=trainingVideoEntry] h1{letter-spacing:.1em;}[class~=textbox]{background-color:transparent;}#dropCourse,[class~=textbox]{color:white;}[class~=trainingVideoEntry] h1{color:#fff;}#dropCourse{text-align:center;}#dropBatch{width:49%;}#dropBatch{height:3.125pc;}[class~=textbox]{font-weight:400;}[class~=textbox],#dropBatch{outline:none;}#dropBatch{background:rgba(0,0,0,.05);}[class~=textbox]{padding-left:.4em;}[class~=textbox]{padding-right:.4em;}[class~=trainingVideoEntry] h1,[class~=otherVideosEntry] h1{text-align:left;}[class~=textbox]{padding-top:auto;}[class~=textbox]{padding-bottom:auto;}[class~=otherVideosViews],[class~=trainingVideoTitle],[class~=trainingVideoViews],[class~=otherVideosEntry],.otherVideosTitle,[class~=trainingVideoEntry],[class~=resourcesEntry],.resourcesDesc{display:flex;}[class~=resourcesEntry]{width:98%;}[class~=trainingVideoTitle],[class~=trainingVideoViews],[class~=otherVideosViews],[class~=trainingVideoEntry],[class~=resourcesEntry],.otherVideosTitle,[class~=otherVideosEntry],.resourcesDesc{height:2.5pc;}[class~=trainingVideoEntry],[class~=resourcesEntry]{margin-top:.5em;}#dropBatch{border-left-style:solid;}[class~=trainingVideoEntry],[class~=resourcesEntry]{margin-bottom:.5em;}[class~=resourcesEntry],[class~=trainingVideoEntry]{margin-left:auto;}[class~=resourcesEntry],[class~=trainingVideoEntry]{margin-right:auto;}#dropBatch{border-bottom-style:solid;}#dropBatch{border-right-style:solid;}[class~=trainingVideoEntry],[class~=resourcesEntry]{justify-content:space-between;}[class~=otherVideosEntry] h1,[class~=trainingVideoEntry] h1{cursor:pointer;}.resourcesDesc{width:50%;}[class~=otherVideosEntry] h1,[class~=basicFilesEntry] h1{font-family:"Roboto";}[class~=basicFilesEntry] h1,[class~=otherVideosEntry] h1{font-style:normal;}#dropBatch{border-top-style:solid;}#dropBatch{border-left-color:white;}[class~=trainingVideoViews],[class~=trainingVideoTitle],.otherVideosTitle,.resourcesDesc{overflow:hidden;}.resourcesDesc,[class~=basicFilesTitle],[class~=trainingVideoViews],[class~=trainingVideoTitle]{word-break:keep-all;}[class~=trainingVideoEntry]{width:98%;}#dropBatch,[class~=otherVideosEntry] h1{font-weight:700;}[class~=otherVideosEntry] h1{line-height:.239583333in;}[class~=otherVideosEntry] h1{color:#fff;}[class~=otherVideosEntry] h1{margin-top:auto;}[class~=trainingVideoTitle]{width:50%;}#dropBatch{border-bottom-color:white;}[class~=basicFilesEntry] h1,[class~=otherVideosEntry] h1{margin-bottom:auto;}#dropBatch{border-right-color:white;}[class~=trainingVideoViews]{width:45%;}#dropBatch{border-top-color:white;}#dropBatch{border-image:none;}[class~=otherVideosEntry]{width:98%;}#dropBatch{border-radius:6px;}[class~=otherVideosEntry],[class~=basicFilesEntry]{margin-top:.5em;}[class~=otherVideosEntry],[class~=basicFilesEntry]{margin-bottom:.5em;}[class~=basicFilesEntry],[class~=otherVideosEntry]{margin-left:auto;}[class~=basicFilesEntry],[class~=otherVideosEntry]{margin-right:auto;}[class~=otherVideosEntry],[class~=basicFilesEntry]{justify-content:space-between;}#dropBatch{font-family:"Roboto";}.otherVideosTitle{width:50%;}#dropBatch{font-style:normal;}[class~=otherVideosViews]{width:45%;}#dropBatch,[class~=basicFilesEntry] h1{font-size:.875pc;}#dropBatch{line-height:28px;}[class~=basicFilesTitle],[class~=basicFilesDownloads],[class~=otherVideosViews]{overflow:hidden;}[class~=basicFilesTitle],[class~=basicFilesEntry],[class~=basicFilesDownloads]{display:flex;}[class~=basicFilesEntry]{width:98%;}[class~=basicFilesEntry] h1{font-weight:700;}[class~=basicFilesDownloads],[class~=basicFilesTitle],[class~=basicFilesEntry]{height:40px;}[class~=basicFilesEntry] h1{line-height:1.4375pc;}[class~=basicFilesEntry] h1,#dropBatch{letter-spacing:.1em;}[class~=basicFilesEntry] h1{color:#fff;}[class~=basicFilesEntry] h1{margin-top:auto;}[class~=basicFilesEntry] h1{text-align:left;}#dropBatch{color:white;}[class~=basicFilesEntry] h1{cursor:pointer;}[class~=basicFilesTitle]{width:50%;}#dropBatch{text-align:center;}[class~=basicFilesDownloads]{width:45%;}[class~=basicFilesDownloads]{word-break:keep-all;}[class~=btnDelTrainingVideo],.btnDelBasicFiles,[class~=btnPlayOtherVideos],[class~=imgResources],[class~=btnDelOtherVideos],[class~=btnPlayTrainingVideo],[class~=btnDownloadBasicFiles]{margin-left:.2em;}[class~=imgResources],[class~=btnDelOtherVideos],[class~=btnDownloadBasicFiles],.btnDelBasicFiles,[class~=btnDelTrainingVideo],[class~=btnPlayTrainingVideo],[class~=btnPlayOtherVideos]{margin-bottom:auto;}[class~=btnDelOtherVideos],[class~=btnPlayOtherVideos],[class~=imgResources],[class~=btnDelTrainingVideo],[class~=btnPlayTrainingVideo],.btnDelBasicFiles,[class~=btnDownloadBasicFiles]{margin-right:.2em;}[class~=btnPlayOtherVideos],[class~=imgResources],[class~=btnDelOtherVideos],[class~=btnPlayTrainingVideo],.btnDelBasicFiles,[class~=btnDownloadBasicFiles],[class~=btnDelTrainingVideo]{margin-top:auto;}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: white;
+    opacity: 0.5; /* Firefox */
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: rgba(255, 255, 255, 0.5)
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+    color: rgba(255, 255, 255, 0.5)
+  }
+
+#resources {
+    width: 800px;
+    min-width: 320px;
+    margin:auto;
+    margin-top: 7.4em;
+    margin-bottom: 10vh;
+    height: auto;
+    padding-left: 1em;
+    padding-right: 1em;
+    display: inline-flex;
+    flex-direction: column;
+}
+
+#resources img {
+    cursor: pointer;
+}
+
+.dropHeader {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 3em;
+}
+
+#dropCourse {
+    width: 49%;
+    height: 50px;
+    outline: none;
+    background: rgba(0, 0, 0, 0.05);
+    border: 1px white solid;
+    border-radius: 6px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    color: white;
+    text-align: center;
+}
+
+#dropBatch {
+    width: 49%;
+    height: 50px;
+    outline: none;
+    background: rgba(0, 0, 0, 0.05);
+    border: 1px white solid;
+    border-radius: 6px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    color: white;
+    text-align: center;
+}
+
+
+.dropOption {
+    color: #303030;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    text-align: center;
+    padding-top: 1em;
+    padding-bottom: 1em;
+
+}
+
+.frm {
+    width: 100%;
+    height: auto;
+    display: inline-flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 3em;
+}
+
+.frm img {
+    object-fit: none;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.frm h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 22px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+}
+
+
+.entry {
+    width: auto;
+    min-height: 140px;
+    height: auto;
+    border: 1px solid white;
+    border-radius: 6px;
+    margin-top: 0.5em;
+    background: rgba(0, 0, 0, 0.05);
+    padding-bottom: .5em;
+}
+
+.entryHeader {
+    display: flex;
+    width: 98%;
+    height: auto;
+    margin: auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    justify-content: space-between;
+}
+
+
+.bannerLine {
+    width: 98%;
+    height: 1px;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: .3;
+}
+
+.textbox {
+    margin: auto;
+    width: 94%;
+    height: 40px;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: transparent;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    padding-left: .4em;
+    padding-right: .4em;
+    padding-top: auto;
+    padding-bottom: auto;
+    color: white;
+    outline: none;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+
+.resourcesEntry {
+    display: flex;
+    width: 98%;
+    height: 40px;
+    margin-top: .5em;
+    margin-bottom: .5em;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+}
+
+.resourcesEntry h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: left;
+}
+
+
+.resourcesDesc {
+    width: 50%;
+    height: 40px;
+    display: flex;
+    overflow: hidden;
+    word-break:keep-all;
+}
+
+
+.trainingVideoEntry {
+    display: flex;
+    width: 98%;
+    height: 40px;
+    margin-top: .5em;
+    margin-bottom: .5em;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+}
+
+.trainingVideoEntry h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: left;
+    cursor: pointer;
+}
+
+.trainingVideoTitle {
+    width: 50%;
+    height: 40px;
+    display: flex;
+    overflow: hidden;
+    word-break:keep-all;
+}
+
+.trainingVideoViews {
+    width: 45%;
+    height: 40px;
+    display: flex;
+    overflow: hidden;
+    word-break:keep-all;
+}
+
+.otherVideosEntry {
+    display: flex;
+    width: 98%;
+    height: 40px;
+    margin-top: .5em;
+    margin-bottom: .5em;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+}
+
+.otherVideosEntry h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: left;
+    cursor: pointer;
+}
+
+
+.otherVideosTitle {
+    width: 50%;
+    height: 40px;
+    display: flex;
+    overflow: hidden;
+}
+
+
+.otherVideosViews {
+    width: 45%;
+    height: 40px;
+    display: flex;
+    overflow: hidden;
+}
+
+.basicFilesEntry {
+    display: flex;
+    width: 98%;
+    height: 40px;
+    margin-top: .5em;
+    margin-bottom: .5em;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+}
+
+.basicFilesEntry h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: left;
+    cursor: pointer;
+}
+
+.basicFilesTitle {
+    width: 50%;
+    height: 40px;
+    display: flex;
+    overflow: hidden;
+    word-break:keep-all;
+}
+
+.basicFilesDownloads {
+    width: 45%;
+    height: 40px;
+    display: flex;
+    overflow: hidden;
+    word-break:keep-all;
+}
+
+
+.imgResources {
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.btnPlayTrainingVideo {
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+    
+}
+
+.btnDelTrainingVideo {
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.btnPlayOtherVideos {
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.btnDelOtherVideos {
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.btnDownloadBasicFiles {
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.btnDelBasicFiles {
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+
