--- a/css-j2bt6x/home.css
+++ b/css-j2bt6x/home.css
@@ -1,2 +1,104 @@
-/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/07/31 13:33:19 */
-#homeTitle p{color:white;}#leftCard,#newBody{flex-grow:1;}#leftCard,#newBody{min-width:20pc;}#newBody{max-width:70vw;}#newBody{height:auto;}#newBody{margin-top:14vh;}#newBody{margin-bottom:10vh;}#newBody{margin-right:auto;}#homeDesc p,#btnEnroll h1,#homeTitle p{font-family:"Poppins";}#newBody{margin-left:auto;}#btnEnroll h1,#homeTitle p,#homeDesc p{font-style:normal;}#leftCard,#homeTitle,#homeDesc,#newBody{display:flex;}#newBody{flex-wrap:wrap;}#newBody{justify-content:center;}#homeTitle p{font-weight:700;}#newBody{aspect-ratio:2/1;}#homeTitle p{font-size:5.42vm ax;}#leftCard{width:20%;}#homeTitle p{line-height:100%;}#leftCard{margin-left:1em;}#homeTitle p{cursor:default;}#leftCard{margin-right:1em;}#homeTitle,#homeDesc p,#homeTitle p,#homeDesc{margin-top:auto;}#leftCard{flex-direction:column;}#leftCard{aspect-ratio:1/1;}#homeDesc,#homeTitle p,#homeDesc p,#btnEnroll,#homeTitle{margin-bottom:auto;}#homeTitle,#homeDesc{width:100%;}#homeTitle{aspect-ratio:2/1;}#homeTitle{height:44%;}#homeTitle,#homeDesc{word-wrap:break-word;}#homeDesc{height:10vm ax;}#homeDesc p{font-weight:300;}#homeDesc p{font-size:1.6vm ax;}#homeDesc{min-height:25%;}#homeDesc p{line-height:140%;}#btnEnroll{border-left-width:.1875pc;}#homeDesc p,#btnEnroll h1{color:#fff;}#btnEnroll{border-bottom-width:.1875pc;}#btnEnroll{border-right-width:.1875pc;}#btnEnroll{border-top-width:.1875pc;}#btnEnroll{border-left-style:solid;}#btnEnroll{border-bottom-style:solid;}#btnEnroll h1{font-weight:700;}#btnEnroll h1{font-size:2vm ax;}#btnEnroll{border-right-style:solid;}#btnEnroll{border-top-style:solid;}#btnEnroll h1{line-height:100%;}#btnEnroll{border-left-color:#fff;}#btnEnroll{border-bottom-color:#fff;}#btnEnroll{border-right-color:#fff;}#btnEnroll h1{margin-left:auto;}#btnEnroll{border-top-color:#fff;}#btnEnroll{border-image:none;}#btnEnroll{border-radius:99px;}#btnEnroll{width:98%;}#btnEnroll{height:4vm ax;}#btnEnroll h1{margin-bottom:auto;}#btnEnroll{display:flex;}#btnEnroll{margin-top:auto;}#btnEnroll{cursor:pointer;}#btnEnroll h1{margin-right:auto;}#btnEnroll h1{margin-top:auto;}#rightCard{flex-grow:1;}#rightCard{width:20%;}#rightCard{min-width:240pt;}#rightCard{margin-left:1em;}#rightCard{margin-right:1em;}#rightCard{aspect-ratio:1/1;}#rightCard{border-left-width:.75pt;}#rightCard{border-bottom-width:.75pt;}#rightCard{border-right-width:.75pt;}#rightCard{border-top-width:.75pt;}#rightCard{border-left-style:solid;}#rightCard{border-bottom-style:solid;}#rightCard{border-right-style:solid;}#rightCard{border-top-style:solid;}#rightCard{border-left-color:white;}#rightCard{border-bottom-color:white;}#rightCard{border-right-color:white;}#rightCard{border-top-color:white;}#rightCard{border-image:none;}#rightCard{border-radius:.375pc;}#rightCard{margin-top:1em;}#rightCard{margin-bottom:1em;}
+
+
+#newBody {
+    flex-grow: 1;
+    min-width: 320px;
+    max-width: 70vw;
+    height: auto;
+    margin-top: 14vh;
+    margin-bottom: 10vh;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    aspect-ratio: 2/1;
+}
+
+#leftCard {
+    flex-grow: 1;
+    width: 20%;
+    min-width: 320px;
+    margin-left: 1em;
+    margin-right: 1em;
+    display: flex;
+    flex-direction: column;
+    aspect-ratio: 1/1;
+}
+
+#homeTitle {
+    width: 100%;
+    aspect-ratio: 2/1;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 44%;
+    word-wrap: break-word;
+    display: flex;
+}
+
+#homeTitle p {
+    color: white;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 5.42vmax;
+    line-height: 100%;
+    cursor: default;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+#homeDesc {
+    width: 100%;
+    height: 10vmax;
+    min-height: 25%;
+    word-wrap: break-word;
+    display: flex;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+#homeDesc p {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 1.6vmax;
+    line-height: 140%;
+    color: #FFFFFF;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+#btnEnroll {
+    border: 3px solid #FFFFFF;
+    border-radius: 99px;
+    width: 98%;
+    height: 4vmax;
+    display: flex;
+    margin-top: auto;
+    margin-bottom: auto;
+    cursor: pointer;
+}
+
+#btnEnroll h1 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2vmax;
+    line-height: 100%;
+    color: #FFFFFF;
+    margin: auto;
+}
+
+#rightCard {
+    flex-grow: 1;
+    width: 20%;
+    min-width: 320px;
+    margin-left: 1em;
+    margin-right: 1em;
+    aspect-ratio: 1/1;
+    border: 1px solid white;
+    border-radius: 6px;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
