--- a/css-j2bt6x/menu.css
+++ b/css-j2bt6x/menu.css
@@ -47,7 +47,14 @@
 }
 
 #black {
+    z-index: 7;
+    opacity: .2;
     display: flex;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    visibility: hidden;
+    background-color: black;
     transition: opacity .5s;
 }
 
